projects/hipfile/include/hipfile.h


#define HIPFILE_VERSION_MAJOR 0
#define HIPFILE_VERSION_MINOR 2
#define HIPFILE_VERSION_PATCH 0
typedef __int64 hoff_t;
typedef off_t hoff_t;
typedef SSIZE_T ssize_t;
#define HIPFILE_BASE_ERR 5000
typedef enum hipFileOpError {
    hipFileSuccess                 = 0,                     
    hipFileDriverNotInitialized    = HIPFILE_BASE_ERR + 1,  
    hipFileDriverInvalidProps      = HIPFILE_BASE_ERR + 2,  
    hipFileDriverUnsupportedLimit  = HIPFILE_BASE_ERR + 3,  
    hipFileDriverVersionMismatch   = HIPFILE_BASE_ERR + 4,  
    hipFileDriverVersionReadError  = HIPFILE_BASE_ERR + 5,  
    hipFileDriverClosing           = HIPFILE_BASE_ERR + 6,  
    hipFilePlatformNotSupported    = HIPFILE_BASE_ERR + 7,  
    hipFileIONotSupported          = HIPFILE_BASE_ERR + 8,  
    hipFileDeviceNotSupported      = HIPFILE_BASE_ERR + 9,  
    hipFileDriverError             = HIPFILE_BASE_ERR + 10, 
    hipFileHipDriverError          = HIPFILE_BASE_ERR + 11, 
    hipFileHipPointerInvalid       = HIPFILE_BASE_ERR + 12, 
    hipFileHipMemoryTypeInvalid    = HIPFILE_BASE_ERR + 13, 
    hipFileHipPointerRangeError    = HIPFILE_BASE_ERR + 14, 
    hipFileHipContextMismatch      = HIPFILE_BASE_ERR + 15, 
    hipFileInvalidMappingSize      = HIPFILE_BASE_ERR + 16, 
    hipFileInvalidMappingRange     = HIPFILE_BASE_ERR + 17, 
    hipFileInvalidFileType         = HIPFILE_BASE_ERR + 18, 
    hipFileInvalidFileOpenFlag     = HIPFILE_BASE_ERR + 19, 
    hipFileDIONotSet               = HIPFILE_BASE_ERR + 20, 
    hipFileInvalidValue            = HIPFILE_BASE_ERR + 22, 
    hipFileMemoryAlreadyRegistered = HIPFILE_BASE_ERR + 23, 
    hipFileMemoryNotRegistered     = HIPFILE_BASE_ERR + 24, 
    hipFilePermissionDenied        = HIPFILE_BASE_ERR + 25, 
    hipFileDriverAlreadyOpen       = HIPFILE_BASE_ERR + 26, 
    hipFileHandleNotRegistered     = HIPFILE_BASE_ERR + 27, 
    hipFileHandleAlreadyRegistered = HIPFILE_BASE_ERR + 28, 
    hipFileDeviceNotFound          = HIPFILE_BASE_ERR + 29, 
    hipFileInternalError           = HIPFILE_BASE_ERR + 30, 
    hipFileGetNewFDFailed          = HIPFILE_BASE_ERR + 31, 
    hipFileDriverSetupError        = HIPFILE_BASE_ERR + 33, 
    hipFileIODisabled              = HIPFILE_BASE_ERR + 34, 
    hipFileBatchSubmitFailed       = HIPFILE_BASE_ERR + 35, 
    hipFileGPUMemoryPinningFailed  = HIPFILE_BASE_ERR + 36, 
    hipFileBatchFull               = HIPFILE_BASE_ERR + 37, 
    hipFileAsyncNotSupported       = HIPFILE_BASE_ERR + 38, 
    hipFileIOMaxError              = HIPFILE_BASE_ERR + 39, 
} hipFileOpError_t;
HIPFILE_API
const char *hipFileGetOpErrorString(hipFileOpError_t status);
typedef struct __HIPFILE_NODISCARD hipFileError {
    hipFileOpError_t err;         
    hipError_t       hip_drv_err; 
} hipFileError_t;
typedef enum hipFileDriverStatusFlags {
    hipFileLustreSupported       = 0, 
    hipFileWekaFSSupported       = 1, 
    hipFileNFSSupported          = 2, 
    hipFileGPFSSupported         = 3, 
    hipFileNVMeSupported         = 4, 
    hipFileNVMeoFSupported       = 5, 
    hipFileSCSISupported         = 6, 
    hipFileScaleFluxCSDSupported = 7, 
    hipFileNVMeshSupported       = 8, 
    hipFileBeeGFSSupported       = 9, 
    hipFileNVMeP2PSupported = 11, 
    hipFileScatefsSupported = 12, 
} hipFileDriverStatusFlags_t;
typedef enum hipFileDriverControlFlags {
    hipFileUsePollMode     = 0, 
    hipFileAllowCompatMode = 1, 
} hipFileDriverControlFlags_t;
typedef enum hipFileFeatureFlags {
    hipFileDynRoutingSupported = 0, 
    hipFileBatchIOSupported    = 1, 
    hipFileStreamsSupported    = 2, 
    hipFileParallelIOSupported = 3, 
} hipFileFeatureFlags_t;
typedef struct hipFileDriverProps {
    struct {
        unsigned major_version; 
        unsigned minor_version; 
        uint64_t poll_thresh_size;   
        uint64_t max_direct_io_size; 
        unsigned driver_status_flags;  
        unsigned driver_control_flags; 
    } nvfs;
    unsigned feature_flags; 
    uint64_t max_device_cache_size; 
    uint64_t per_buffer_cache_size; 
    uint64_t max_device_pinned_mem_size; 
    unsigned max_batch_io_count;         
    unsigned max_batch_io_timeout_msecs; 
} hipFileDriverProps_t;
typedef struct hipFileRDMAInfo {
    int         version;  
    int         desc_len; 
    const char *desc_str; 
} hipFileRDMAInfo_t;
typedef struct hipFileFSOps {
    const char *(*fs_type)(void *handle);
    int (*getRDMADeviceList)(void *handle, struct sockaddr **hostaddrs);
    int (*getRDMADevicePriority)(void *handle, char *, size_t, hoff_t, struct sockaddr *hostaddr);
    ssize_t (*read)(void *handle, char *, size_t, hoff_t, hipFileRDMAInfo_t *);
    ssize_t (*write)(void *handle, const char *, size_t, hoff_t, hipFileRDMAInfo_t *);
} hipFileFSOps_t;
typedef enum hipFileFileHandleType {
    hipFileHandleTypeOpaqueFD    = 1, 
    hipFileHandleTypeOpaqueWin32 = 2, 
    hipFileHandleTypeUserspaceFS = 3, 
} hipFileFileHandleType_t;
typedef struct hipFileDescr {
    hipFileFileHandleType_t type; 
    union {
        int   fd;                 
        void *hFile;              
    } handle;                     
    const hipFileFSOps_t *fs_ops; 
} hipFileDescr_t;
typedef void *hipFileHandle_t;
HIPFILE_API
hipFileError_t hipFileHandleRegister(hipFileHandle_t *fh, hipFileDescr_t *descr);
HIPFILE_API
void hipFileHandleDeregister(hipFileHandle_t fh);
HIPFILE_API
hipFileError_t hipFileBufRegister(const void *buffer_base, size_t length, int flags);
HIPFILE_API
hipFileError_t hipFileBufDeregister(const void *buffer_base);
HIPFILE_API
ssize_t hipFileRead(hipFileHandle_t fh, void *buffer_base, size_t size, hoff_t file_offset,
                    hoff_t buffer_offset);
HIPFILE_API
ssize_t hipFileWrite(hipFileHandle_t fh, const void *buffer_base, size_t size, hoff_t file_offset,
                     hoff_t buffer_offset);
HIPFILE_API
hipFileError_t hipFileDriverOpen(void);
HIPFILE_API
hipFileError_t hipFileDriverClose(void);
HIPFILE_API
int64_t hipFileUseCount(void);
HIPFILE_API
hipFileError_t hipFileDriverGetProperties(hipFileDriverProps_t *props);
HIPFILE_API
hipFileError_t hipFileGetVersion(unsigned *major, unsigned *minor, unsigned *patch);